# hash98-miner-cli-gpu

./: .env.example  .gitignore  Cargo.toml  README.en.md  README.md  README.python.md  miner.example.toml  start.bat
kernels/: sha256_pow.cl
reference/: HASH98.abi.json  HASH98_ABI.md  SPEC.md
src/: abi.rs  accounts.rs  chain.rs  cli.rs  config.rs  gpu.rs  lib.rs  main.rs  miner.rs  pow.rs  submit.rs  verify.rs
