[package]
name = "hash98-miner"
version = "0.1.0"
edition = "2021"
description = "Multi-GPU (OpenCL) proof-of-work miner for the HASH98 inscription mint (h98hash.xyz) — Rust port"
license = "MIT"
rust-version = "1.78"

[[bin]]
name = "hashminer"
path = "src/main.rs"

[dependencies]
# Ethereum (modern stack — replaces web3.py + eth-account + eth-abi + eth-utils)
alloy = { version = "0.8", features = ["full", "signer-local", "node-bindings", "rpc-types-eth"] }
# Async runtime
tokio = { version = "1.40", features = ["full"] }
futures-util = "0.3"
# OpenCL bindings (replaces pyopencl)
opencl3 = "0.9"
# CLI (replaces click)
clap = { version = "4.5", features = ["derive", "env"] }
# Config / serde / TOML
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
dotenvy = "0.15"
# Crypto
sha2 = "0.10"
tiny-keccak = { version = "2.0", features = ["keccak"] }
hex = "0.4"
# Errors / logging
anyhow = "1"
thiserror = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
# Misc
rand = "0.8"
crossbeam-channel = "0.5"
parking_lot = "0.12"
once_cell = "1.20"
url = "2.5"

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
strip = true
